@@ -1,47 +1,54 @@
-# DirectInput using Panama + jextract
+# DirectInput using Panama + jextract + codegen
 
 An attempt at auto-generating a usable `DirectInput8 (dinput.h)` wrapper in Java using Project Panama and zero JNI code
 or helpers.
-* Requires jdk17-panama to compile or run examples.
+
+* Requires jdk17-panama preview to compile or run examples.
 
 Currently this is in a working state and the native calls do work.
 
-However, this is mostly an extercise in working on some really helpful code-generator templates and discover what kind
-of code generation is truly needed to help make Panama a success.  
-  
+However, this is mostly an exercise in discovering code-generator improvements so that it is possible to generate highly
+usable native code wrappers.
+
 ## Summary
-* The JDK `jextract` tool generates low-level classes based on `dinput.h` into `lib-dinput8-jextract/dev.viskar.lib.dinput8.natives`
-* The `native-codegen` module contains additional code generators, which generates more human-friendly code on top of 
-  the jextrac code. This provides the Class/Interface objects with all of their virtual methods resolved into method 
-  handles and corresponding java methods.
-* The `lib-dinput8` module provides the few classes that
+
+* The JDK `jextract` tool generates low-level classes based on `dinput.h`
+  into `lib-dinput8-jextract/dev.viskar.lib.dinput8.natives`
+* The `native-codegen` module contains an experimental code-generator tool that can generate code based on the classes
+  output by`jextract`. This code generate produces human-friendly code on top of the jextract code. This crucially
+  provides the massive amounts of setup code to create Class/Interface objects with all of their virtual methods
+  resolved into method handles and corresponding java methods + wrapper classes.
+* The `lib-dinput8` module provides the final hand-written code, adding in javadocs and slight interface improvements.
 
 # Code Generation Walkthrough
 
-This project's main focus is its reusable generator aimed at improving the upon `jextract` generated sources.
-It takes a lot of the classe files geneatad from `jextract` and re-assembles them into more human-friendly code.
-The key features it adds are:
-* Genrates Java objects based on C/C++ objects using the discovered vtable structures. These have a fully functioning 
-  list of methods powered by behind-the-scene `MethodHandle`s.
+This project's main focus is its reusable generator aimed at improving the upon `jextract` generated sources. It takes a
+lot of the classe files geneatad from `jextract` and re-assembles them into more human-friendly code. The key features
+it adds are:
+
+* Genrates Java objects based on C/C++ objects using the discovered vtable structures. These have a fully functioning
+  list of methods powered by behind-the-scene `MethodHandles`.
 * Generates Java objects that wrap a struct `MemorySegment` with the look and feel of a POJO with getters/setters.
 
 ## The Code Generation Logic
 
-After running `jextract`, one of the first things that's apparent is that it's not 
-really streamlined for working with C/C++ objects/classes yet. Although a bit scattered,
-the the necessary data does exist, so it's just a matter of making code smart enough to assemble it
-into a more usable form.
+After running `jextract`, one of the first things that's apparent is that it's not really streamlined for working with
+C/C++ objects/classes yet. Although a bit scattered, the the necessary data does exist, so it's just a matter of making
+code smart enough to assemble it into a more usable form.
 
-This is is what it the raw `jextract` output looks like when you find an object with it's methods/vtable structure.
+This is roughly what the raw `jextract` output looks like when it exports an object with vtable methods (comments added
+by me).
+
 ```
 class dinput_h {
 
-    // Object with a vtable!
     class IDirectInput8W {
+        // Object with a vtable has these getters/setters
         static lpVtbl$get(MemoryAddress add);
         static lpVtbl$set(MemoryAddress add);
     }
-    // It's vtbl structure
+    
+    // The corresponding vtbl
     // - The nested Interfaces describe the function in this vtable
     // - The getters are accessor for the function address
     IDirectInput8WVtbl {
@@ -73,33 +80,40 @@ class dinput_h {
     }
 }
 ```
-So it's obvious that we have the information needed to work with this class structure, but it's all very scattered and 
-needs some setup:
+
+The information is all there to piece together an object, but it would still be a lot of boiler plate. So the codegen
+module in this project aims to bridge that gap.
+
+Some of the troubles work with these jextract classes:
+
 * There's no pre-generated static methods to help make the `MethodHandle`s that we'll need.
 * There's no explicit pairing `IDirectInput8W` and `IDirectInput8WVtbl`, we just have to know to link them together.
-* The interfaces inside the `vtbl` describe the native signatures, although this has to be done through java reflection.
-  
+* The `interface` declarations in the `vtbl` DO describe the method signature, but its not exposed as
+  a `FunctionDescriptor` or `MethodType`. So we have to use reflection to regenerate it.
+
 But we can still work with this, that's what code generators are for. From here, the steps would be:
-* For each inner interface inside the vtbl (`CreateDevice$243`), look for the corresponding vtbl getter (`CreateDevice$get`).
-* Do some reflection on the "apply" function `CreateDevice$243.apply(..)` to re-build the `MethodType` signature, because 
-  only place the the `MethodType` string actually exists is currently hardcoded inside of `allocate()`.
-* Create code to instantiate and prepare all the `MethodHandles`.
+
+* For each inner interface inside the vtbl (e.g. `CreateDevice$243`), look for the corresponding vtbl
+  getter (`CreateDevice$get`).
+* Do some reflection on the "apply" function `CreateDevice$243.apply(..)` to re-build the `MethodType` signature
+* Create code to instantiate and hold all the `MethodHandles`.
 
 So, the steps to generate the code are shaping up to look like:
-  * Given a `MemoryAddress` to an `IDirectInput8W` instance
-  * Convert it to a `MemorySegment` with `IDirectInput8W.sizeof()`
-  * Read the `vtbl` pointer with `IDirectInput8W.lpVtbl$get`
-  * Convert the vtbl's `MemoryAddress` to its `MemorySegment` using `IDirectInput8WVtbl.sizeof()`.
-  * For each discovered inteface/method in `IDirectInput8WVtbl`
-    * Read the function address from the vtbl: `MemoryAddress f = IDirectInput8WVtbl.CreateDevice$get(vtbl)`
-    * Build the `MethodType` from the interface `CreateDevice$243.apply(..)` using some reflection
-    * Grab the `FunctionDescriptor` from the jextract classes `dinput_h_constants.CreateDevice$243$FUNC()`
-    * Build the `MethodHandle` with `RuntimeHelper.downcallHandle(..)`
-    * Store the `MethodHandle` somewhere so we don't have to re-build it
-    * Wrap the all the `MethodHandle` into a class with actual Java methods to guarantee parameter correctness.
-    * Assemble all the methods into a single class
-    * Return the final generated code.
-    
+
+1. Given a `MemoryAddress` to an `IDirectInput8W` instance
+2. Convert it to a `MemorySegment` with `IDirectInput8W.sizeof()`
+3. Read the `vtbl` pointer with `IDirectInput8W.lpVtbl$get`
+4. Convert the vtbl's `MemoryAddress` to its `MemorySegment` using `IDirectInput8WVtbl.sizeof()`.
+5. For each discovered inteface/method in `IDirectInput8WVtbl`
+    1. Read the function address from the vtbl: `MemoryAddress f = IDirectInput8WVtbl.CreateDevice$get(vtbl)`
+    2. Build the `MethodType` from the interface `CreateDevice$243.apply(..)` using some reflection
+    3. Grab the `FunctionDescriptor` from the jextract classes `dinput_h_constants.CreateDevice$243$FUNC()`
+    4. Build the `MethodHandle` with `RuntimeHelper.downcallHandle(..)`
+    5. Store the `MethodHandle` somewhere so we don't have to re-build it
+    6. Wrap the all the `MethodHandle` into a class with actual Java methods to guarantee parameter correctness.
+    7. Assemble all the methods into a single class
+    8. Return the final generated code.
+
 The result is something that resembles this:
 
 ```
@@ -173,7 +187,7 @@ public final class IDirectInput8WInstance {
 }
 ```
 
-So now we have a faily human friendly object to work with:
+So now we have a fairly human friendly object to work with:
 
 ```
 IDirectInput8WInstance instance = new IDirectInput8WInstance(address);
@@ -183,11 +197,13 @@ instance.CreateDevice(..);
 ```
 
 But it's still not quite usable. It could use some final touches:
+
 * Add javadoc
 * Add real parameter names
 * Add new method signatures that use more accurate types rather than just `MemoryAddress`.
 
-Thankfully with this generator, we can also generate all structs as well. And any callbacks can be sorted out with a tiny bit of code too.
+Thankfully with this generator, we can also generate all structs as well. And any callbacks can be sorted out with a
+tiny bit of code too.
 
 So the final bit of work is just to hand-write some clean adapters:
 
@@ -222,7 +238,7 @@ The final user code looks like this:
 ```
 DirecInput8W directInput = DirecInput8W.getInstance();
 
-directInput.EnumDevices(dinput_h.DI8DEVCLASS_GAMECTRL(), dinput_h.DIEDFL_ATTACHEDONLY(), deviceInstance -> {
+directInput.EnumDevices(DI8DEVCLASS_GAMECTRL(), DIEDFL_ATTACHEDONLY(), deviceInstance -> {
     
     // Strongly typed invocation.
     // The callback and CreateDevice both take a TDIDEVICEINSTANCEW object
@@ -250,8 +266,9 @@ jextract -d . \
 
 After generating, need to fix the `LIBRARY[]` object in `dinput_h_constants` to use a correct path.
 
-### Build
+### Export
 
 ```
-mvn clean package
+--add-opens java.desktop/java.awt=ALL-UNNAMED
+--add-exports java.desktop/
 ```
